KCMoptions: delay initialization after QObject creation in standalone

BUG: 423111
FIXED-IN: 5.19.2